--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ADHD Focus Quiz</title>
   <style>
     body {
@@ -136,6 +136,7 @@
 
     let currentQuestion = 0;
     let totalScore = 0;
+    const maxPossibleScore = questions.length * 3; // max score per question = 3
 
     function loadQuestion() {
       const q = questions[currentQuestion];
@@ -159,12 +160,15 @@
     function showResult() {
       document.getElementById("quiz-content").style.display = "none";
       const resultEl = document.getElementById("result");
-      resultEl.textContent = totalScore;
+      
+      // Calculate score out of 100
+      let scorePercent = Math.round((totalScore / maxPossibleScore) * 100);
+      resultEl.textContent = scorePercent;
 
-      // Color based on score range (no text)
-      if (totalScore <= 5) {
+      // Color based on score % (no text)
+      if (scorePercent < 40) {
         resultEl.style.color = "red";
-      } else if (totalScore <= 10) {
+      } else if (scorePercent <= 70) {
         resultEl.style.color = "gold";
       } else {
         resultEl.style.color = "lime";
