--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
       margin-top: 20px;
     }
 
+    #retake-btn {
+      margin-top: 20px;
+      padding: 12px 30px;
+      font-size: 1.2rem;
+      border-radius: 12px;
+      border: none;
+      background: #ffc371;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    #retake-btn:hover {
+      background: #ffb347;
+    }
+
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
@@ -103,6 +117,7 @@
       <button class="option" onclick="selectOption(3)">Option 4</button>
     </div>
     <div id="result" class="score" style="display:none;">0</div>
+    <button id="retake-btn" style="display:none;" onclick="resetQuiz()">Retake Quiz</button>
   </div>
 
   <script>
@@ -136,7 +151,19 @@
 
     let currentQuestion = 0;
     let totalScore = 0;
-    const maxPossibleScore = questions.length * 3; // max score per question = 3
+    const maxPossibleScore = questions.length * 3;
+
+    // Load from localStorage if quiz completed before
+    window.onload = () => {
+      const savedScore = localStorage.getItem('adhdFocusScore');
+      const completed = localStorage.getItem('adhdFocusCompleted');
+
+      if (completed === 'true' && savedScore !== null) {
+        showResult(parseInt(savedScore, 10));
+      } else {
+        loadQuestion();
+      }
+    };
 
     function loadQuestion() {
       const q = questions[currentQuestion];
@@ -145,6 +172,11 @@
       buttons.forEach((btn, idx) => {
         btn.textContent = q.options[idx];
       });
+
+      // Make sure quiz UI is visible and result hidden
+      document.getElementById("quiz-content").style.display = "block";
+      document.getElementById("result").style.display = "none";
+      document.getElementById("retake-btn").style.display = "none";
     }
 
     function selectOption(index) {
@@ -153,19 +185,19 @@
       if (currentQuestion < questions.length) {
         loadQuestion();
       } else {
-        showResult();
+        // Save and show result
+        let scorePercent = Math.round((totalScore / maxPossibleScore) * 100);
+        localStorage.setItem('adhdFocusScore', scorePercent);
+        localStorage.setItem('adhdFocusCompleted', 'true');
+        showResult(scorePercent);
       }
     }
 
-    function showResult() {
+    function showResult(scorePercent) {
       document.getElementById("quiz-content").style.display = "none";
       const resultEl = document.getElementById("result");
-      
-      // Calculate score out of 100
-      let scorePercent = Math.round((totalScore / maxPossibleScore) * 100);
       resultEl.textContent = scorePercent;
 
-      // Color based on score % (no text)
       if (scorePercent < 40) {
         resultEl.style.color = "red";
       } else if (scorePercent <= 70) {
@@ -175,9 +207,16 @@
       }
 
       resultEl.style.display = "block";
+      document.getElementById("retake-btn").style.display = "inline-block";
     }
 
-    loadQuestion();
+    function resetQuiz() {
+      currentQuestion = 0;
+      totalScore = 0;
+      localStorage.removeItem('adhdFocusScore');
+      localStorage.removeItem('adhdFocusCompleted');
+      loadQuestion();
+    }
   </script>
 </body>
 </html>
