--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ADHD Focus Quiz</title>
+  <title>ThinkSharp</title>
   <style>
     body {
       margin: 0;
@@ -108,7 +108,7 @@
 </head>
 <body>
   <div id="quiz-container">
-    <h1>ADHD Focus Quiz</h1>
+    <h1>ThinkSharp</h1>
     <div id="quiz-content">
       <div class="question" id="question">Loading...</div>
       <button class="option" onclick="selectOption(0)">Option 1</button>
